# tjm-home-task

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: builder.py  data_source.py  notepad_driver.py  screen.py  window_validator.py
src/grounder/: prompts.py  types.py
src/grounder/providers/: _common.py  base.py  openai.py  openrouter.py
src/grounder/roles/: __init__.py  grounder.py  planner.py  verifier.py
src/grounder/strategies/: base.py  direct.py  reground.py  screenseeker.py
